KIK-1871, review notes, fixes on firefox

--- a/app/components/ProposalsTable/styles.less
+++ b/app/components/ProposalsTable/styles.less
@@ -112,6 +112,7 @@
 
           &:nth-child(3) {
             max-width: 20%;
+            .break-word();
           }
 
           &:last-child {
@@ -175,7 +176,7 @@
 
           &:nth-child(3) {
             max-width: 20%;
-            word-break: break-word;
+            .break-word();
           }
 
           &:last-child {
